<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/exit_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:gravity="center"
            android:padding="10dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <com.google.android.gms.ads.AdView
                android:id="@+id/nativeAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111" ads:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/exit"
                  android:id="@+id/exit_view" android:gravity="center"
                  android:layout_weight="1"
                  android:padding="10dp"
                  android:background="@drawable/bg_stroke"

        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel"
                  android:id="@+id/cancel_view"
                  android:layout_weight="1"
                  android:padding="10dp"
                  android:gravity="center"
                  android:background="@drawable/bg_stroke_left"
        />
    </LinearLayout>
</LinearLayout>